# SilkRoad

./: 404.html  CLAUDE.md  EMAIL_VERIFY.md  GEMINI.md  README.md  index.html  package-lock.json
silkroad-backend/: .gitignore  CLAUDE.md  README.md  Sample.sql  pyproject.toml  sync.bat  sync.ps1  sync.sh
silkroad-backend/sql/: dbio.dbml  dbio.m  main.sql  old_main.sql  query.sql
silkroad-backend/src/: app.py  run_prod.py
silkroad-backend/src/config/: __init__.py  database.py
silkroad-backend/src/controllers/: TODO-list.md  __init__.py  admin_controller.py  cart_controller.py  customer_controller.py  order_controller.py  shop_controller.py  user_controller.py  vendor_controller.py
silkroad-backend/src/models/: Note.md  __init__.py  admin.py  block_record.py  cart.py  cart_item.py  customer.py  discount_policy.py  order.py  order_item.py  product.py  review.py  shops.py  system_announcement.py  user.py  users.py  vender_manager.py  vendor.py
silkroad-backend/src/routes/: __init__.py  admin_routes.py  cart_routes.py  customer_routes.py  order_routes.py  shop_routes.py  test.py  user_routes.py  vendor_routes.py
silkroad-backend/src/silkroad_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
silkroad-backend/src/test/: API_test.py  __init__.py
silkroad-backend/src/utils/: __init__.py  cloudflare.py  login_verify.py  tasks.py  test.py
silkroad-backend/tests/: README.md  cleanup.bat  cleanup.sh  cleanup_test_data.py  conftest.py
silkroad-backend/tests/api/: __init__.py  test_cart_api.py  test_user_api.py  test_vendor_api.py
(+388 files in other folders)
