[project]
name = "silkroad-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-mail>=0.10.0",
    "flask-apscheduler>=1.13.1",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
